add new feature c3 QueryWalletsWithType and add it in Swager doc
