# docs/swagger.json
@@ -21,6 +21,14 @@
                     "wallet"
                 ],
                 "summary": "Get all wallets",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Wallet type  fillter",
+                        "name": "wallet_type",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
