# main.go
@@ -9,10 +9,10 @@ import (
 	echoSwagger "github.com/swaggo/echo-swagger"
 )
 
-//	@title			Wallet API
-//	@version		1.0
-//	@description	Sophisticated Wallet API
-//	@host			localhost:1323
+// @title			Wallet API
+// @version		1.0
+// @description	Sophisticated Wallet API
+// @host			localhost:1323
 func main() {
 	p, err := postgres.New()
 	if err != nil {
@@ -23,5 +23,13 @@ func main() {
 	e.GET("/swagger/*", echoSwagger.WrapHandler)
 	handler := wallet.New(p)
 	e.GET("/api/v1/wallets", handler.WalletHandler)
+	// e.GET("/api/v1/wallets/:type", func(c echo.Context) error {
+	// 	// Get the wallet type from the URL parameter
+	// 	walletType := c.Param("type")
+
+	// 	// Logic to retrieve wallets by type (e.g., Saving)
+	// 	return c.String(http.StatusOK, "Wallets of type "+walletType)
+	// })
+
 	e.Logger.Fatal(e.Start(":1323"))
 }
